opam-version: "2.0"
name:         "ke"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/ke"
bug-reports:  "https://github.com/mirage/ke/issues"
dev-repo:     "git+https://github.com/mirage/ke.git"
doc:          "https://mirage.github.io/ke/"
license:      "MIT"
synopsis:     "Queue implementation"
description:  """Queue implementation in OCaml (functional and imperative queue)"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {>= "1.5"}
  "fmt"        {>= "0.8.7"}
  "bigarray-compat"
  "alcotest" {with-test}
  "bigstringaf" {with-test}
  "bechamel" {with-test}
  "bechamel-notty" {with-test}
  "ocplib-json-typed" {with-test}
  "core_bench" {with-test}
  "lwt" {with-test}
]
