opam-version: "2.0"
name:         "ke"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/ke"
bug-reports:  "https://github.com/mirage/ke/issues"
dev-repo:     "git+https://github.com/mirage/ke.git"
doc:          "https://mirage.github.io/ke/"
license:      "MIT"
synopsis:     "Queue implementation"
description:  """Queue implementation in OCaml (functional and imperative queue)"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"              {>= "4.08.0"}
  "dune"               {>= "2.0"}
  "alcotest"           {>= "1.7.0" & with-test}
  "bigstringaf"        {>= "0.9.0" & with-test}
  "bechamel"           {with-test}
  "bechamel-js"        {with-test}
  "json-data-encoding" {with-test}
  "lwt"                {with-test}
  "crowbar"            {with-test}
  "rresult"            {>= "0.7.0" & with-test}
  "jsonm"              {with-test}
  "psq"                {with-test}
  "fmt"                {>= "0.8.7" & with-test}
  "cmdliner"           {>= "1.1.0" & with-test}
]
