(executable
 (name bench_with_bechamel)
 (modules bench_with_bechamel)
 (libraries notty.unix bigstringaf ke bechamel bechamel-perf bechamel-notty))

(executable
 (name bench_with_core)
 (modules bench_with_core)
 (libraries bigstringaf core_bench ke core core_unix.command_unix))

(rule
 (alias runbench)
 (action
  (run ./bench_with_bechamel.exe)))

(rule
 (alias runbench)
 (action
  (run ./bench_with_core.exe)))
